# P42

./: README.md
Module1/gnl/: README.md  a.out  get_next_line.c  get_next_line.h  get_next_line.h.gch  get_next_line_utils.c  test
Module1/libftTester/: Makefile
Module1/push_s/: Makefile  README.md  args_parser.c  args_parser.h  benchmark.c  benchmark.h  bucket_sort.c  error_mgmt.c  error_mgmt.h  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_format_char.c  ft_format_double.c  ft_format_hex.c  ft_format_ptr.c  ft_format_signed.c  ft_format_string.c  ft_format_unsigned.c  ft_isalpha.c  ft_isdigit.c  ft_itoa.c  ft_memcpy.c  ft_memset.c  ft_printf.c  ft_printf.h  ft_putchar_fd.c  ft_putstr_fd.c  ft_strchr.c  ft_strjoin.c  ft_strlen.c  ft_strncmp.c  libft.h  min_extract_sort.c  operations.h  push_ops.c  push_swap  push_swap.c  push_swap.h  quick_sort.c  (+14 more)
Module1/thePrintf/: Makefile  README.md  ft_printf.c  ft_printf.h  ft_put_address.c  ft_put_nbr.c  ft_put_str.c  ft_put_unsigned_hex.c  ft_put_unsigned_nbr.c  test
exam/: convertbase.py  dict_dep.py  fenetre.py  palydre_min.py  pascal.py  rev_matrice.py  sort.py
pushalso/: Makefile  README.md  algo_complex.c  algo_medium.c  algo_medium_utils.c  algo_simple.c  algo_utils.c  args.txt  bench.c  bench.txt  ft_disorder.c  ft_index_gen.c  ft_putnbr_fd.c  ft_split.c  ft_str_utils.c  list_util.c  list_util_bis.c  main.c  operations.c  operations_bis.c  operations_bis_bis.c  parse.c  parse_plus.c  parse_plus_bis.c  push_swap  push_swap.h  strategy.c  test.txt  utils.c
pyscine/Matrix/ex1/: loading.py  pyproject.toml
(+1277 files in other folders)
