[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "matrix_project"
version = "0.1.0"
description = "Ex1_Matrix"
requires-python = ">=3.10"

dependencies = [
    "pandas>=2.1.0",
    "requests>=2.31.0",
    "matplotlib>=3.7.2"
]

authors = [
    { name = "Ludovic Lafforgue", email = "ludovic.lafforgue@learner.42.tech" },
]

[tool.poetry]
package-mode = false